--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 .header {
-  height: 150px;
+  height: 125px;
   background-color: lightgrey;
 }
 .wrapper {
   overflow: hidden;
 }
-.contact {
+.main {
   min-height: 500px;
   background-color: lightyellow;
   width: 65%;
   float: left;
 }
-.blog {
+.aside {
   min-height: 500px;
   background-color: lightgreen;
   width: 35%;
   float: right;
 }
 .footer {
-  min-height: 150px;
+  min-height: 125px;
   background-color: lightgrey;
 }
